--- a/data/addons/Gestion_Restaurante_Marcos/views/menu_items.xml
+++ b/data/addons/Gestion_Restaurante_Marcos/views/menu_items.xml
@@ -1,9 +1,9 @@
 <odoo>
 
     <!-- ACCIONES -->
-   <record id="action_platos" model="ir.actions.act_window">
-         <field name="name">Platos</field>
-         <field name="res_model">gestion_restaurante_marcos.plato</field>
+    <record id="action_platos" model="ir.actions.act_window">
+        <field name="name">Platos</field>
+        <field name="res_model">gestion_restaurante_marcos.plato</field>
         <field name="view_mode">list,form</field>
     </record>
 
@@ -23,20 +23,23 @@
     <menuitem id="menu_gestion_restaurante_root"
               name="Gestión Restaurante"/>
 
+    <menuitem id="menu_platos_menus"
+              name="Platos y Menús"
+              parent="menu_gestion_restaurante_root"/>
+
     <menuitem id="menu_platos"
-              parent="menu_gestion_restaurante_root"
+              parent="menu_platos_menus"
               name="Platos"
               action="action_platos"/>
 
     <menuitem id="menu_menus"
-              parent="menu_gestion_restaurante_root"
+              parent="menu_platos_menus"
               name="Menús"
               action="action_menus"/>
 
     <menuitem id="menu_ing"
-              parent="menu_gestion_restaurante_root"
+              parent="menu_platos_menus"
               name="Ingredientes"
               action="action_ingredientes"/>
 
 </odoo>
-    
