--- a/data/addons/gestor_tareas_marcos/views/menu_items.xml
+++ b/data/addons/gestor_tareas_marcos/views/menu_items.xml
@@ -7,10 +7,11 @@
         <field name="view_mode">list,form</field>
     </record>
 
-    <!-- MENÚ -->
+    <!-- MENÚ RAÍZ -->
     <menuitem id="menu_gestor_root"
               name="Gestor de Tareas"/>
 
+    <!-- SUBMENÚ -->
     <menuitem id="menu_tasks"
               parent="menu_gestor_root"
               name="Tareas"
