--- a/data/addons/gestor_tareas_marcos/views/task_views.xml
+++ b/data/addons/gestor_tareas_marcos/views/task_views.xml
@@ -1,25 +1,38 @@
 <odoo>
 
-    <!-- LISTA -->
+    <!-- VISTA LISTA -->
     <record id="view_task_list" model="ir.ui.view">
         <field name="name">gestor.task.list</field>
         <field name="model">gestor_tareas_marcos.task</field>
         <field name="arch" type="xml">
-            <list>
+            <list string="Tareas">
                 <field name="nombre"/>
+                <field name="sprint_id"/>
+                <field name="fecha_inicio"/>
+                <field name="fecha_fin"/>
             </list>
         </field>
     </record>
 
-    <!-- FORMULARIO -->
+    <!-- VISTA FORMULARIO -->
     <record id="view_task_form" model="ir.ui.view">
         <field name="name">gestor.task.form</field>
         <field name="model">gestor_tareas_marcos.task</field>
         <field name="arch" type="xml">
-            <form>
+            <form string="Tarea">
                 <sheet>
                     <group>
                         <field name="nombre"/>
+                        <field name="sprint_id"/>
+                    </group>
+
+
+                    <group>
+                        <field name="fecha_inicio"/>
+                        <field name="fecha_fin"/>
+                    </group>
+
+                    <group>
                         <field name="descripcion"/>
                     </group>
                 </sheet>
