--- a/data/addons/Gestion_Restaurante_Marcos/views/plato_views.xml
+++ b/data/addons/Gestion_Restaurante_Marcos/views/plato_views.xml
@@ -1,18 +1,18 @@
 <odoo>
-   <!-- LISTA -->
-<record id="view_plato_list" model="ir.ui.view">
-    <field name="name">gestion.plato.list</field>
-    <field name="model">gestion_restaurante_marcos.plato</field>
-    <field name="arch" type="xml">
-        <list string="Platos">
-            <field name="nombre"/>
-            <field name="categoria"/>
-            <field name="precio"/>
-            <field name="disponible"/>
-        </list>
-    </field>
-</record>
 
+    <!-- LISTA -->
+    <record id="view_plato_list" model="ir.ui.view">
+        <field name="name">gestion.plato.list</field>
+        <field name="model">gestion_restaurante_marcos.plato</field>
+        <field name="arch" type="xml">
+            <list string="Platos">
+                <field name="nombre"/>
+                <field name="categoria"/>
+                <field name="precio"/>
+                <field name="disponible"/>
+            </list>
+        </field>
+    </record>
 
     <!-- FORMULARIO -->
     <record id="view_plato_form" model="ir.ui.view">
@@ -28,10 +28,11 @@
                         <field name="disponible"/>
                         <field name="tiempo_preparacion"/>
                         <field name="menu"/>
-                        <field name="rel_ingredientes" widget="many2many_tags"/>
+                        <field name="ingredientes_ids" widget="many2many_tags"/>
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
+
 </odoo>
