--- a/data/addons/gestor_tareas_marcos/views/task_views.xml
+++ b/data/addons/gestor_tareas_marcos/views/task_views.xml
@@ -1,43 +1,65 @@
 <odoo>
 
     <!-- VISTA LISTA -->
-    <record id="view_task_list" model="ir.ui.view">
-        <field name="name">gestor.task.list</field>
-        <field name="model">gestor_tareas_marcos.task</field>
-        <field name="arch" type="xml">
-            <list string="Tareas">
-                <field name="nombre"/>
-                <field name="sprint_id"/>
-                <field name="fecha_inicio"/>
-                <field name="fecha_fin"/>
-            </list>
-        </field>
-    </record>
+   <record id="view_task_list" model="ir.ui.view">
+    <field name="name">gestor.task.list</field>
+    <field name="model">gestor_tareas_marcos.task</field>
+    <field name="arch" type="xml">
+        <list string="Tareas">
+            <field name="codigo"/>
+            <field name="nombre"/>
+            <field name="proyecto"/>
+            <field name="sprint_id"/>
+            <field name="historia"/>
+            <field name="fecha_inicio"/>
+            <field name="fecha_fin"/>
+            <field name="finalizado"/>
+        </list>
+    </field>
+</record>
 
     <!-- VISTA FORMULARIO -->
-    <record id="view_task_form" model="ir.ui.view">
-        <field name="name">gestor.task.form</field>
-        <field name="model">gestor_tareas_marcos.task</field>
-        <field name="arch" type="xml">
-            <form string="Tarea">
-                <sheet>
-                    <group>
-                        <field name="nombre"/>
-                        <field name="sprint_id"/>
-                    </group>
+   <record id="view_task_form" model="ir.ui.view">
+    <field name="name">gestor.task.form</field>
+    <field name="model">gestor_tareas_marcos.task</field>
+    <field name="arch" type="xml">
+        <form string="Tarea">
+            <sheet>
 
+                
+                <group>
+                    <field name="codigo"/>
+                    <field name="nombre"/>
+                    <field name="finalizado"/>
+                </group>
 
-                    <group>
-                        <field name="fecha_inicio"/>
-                        <field name="fecha_fin"/>
-                    </group>
+                
+                <group>
+                    <field name="fecha_inicio"/>
+                    <field name="fecha_fin"/>
+                </group>
 
-                    <group>
-                        <field name="descripcion"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
+                
+                <group>
+                    <field name="descripcion"/>
+                </group>
+
+               
+                <group>
+                    <field name="sprint_id"/>
+                    <field name="historia"/>
+                    <field name="proyecto"/>
+                </group>
+
+                
+                <group>
+                    <field name="tecnologias" widget="many2many_tags"/>
+                </group>
+
+            </sheet>
+        </form>
+    </field>
+</record>
+
 
 </odoo>
